--- a/examples/gesture_recognizer/android/app/src/main/AndroidManifest.xml
+++ b/examples/gesture_recognizer/android/app/src/main/AndroidManifest.xml
@@ -69,6 +69,8 @@
         <activity
                 android:name=".refplayer.VideoBrowserActivity"
                 android:label="@string/app_name"
+                android:configChanges="orientation|keyboard|keyboardHidden|screenSize|screenLayout|uiMode"
+                android:launchMode="singleTask"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
