--- a/examples/gesture_recognizer/android/app/src/main/AndroidManifest.xml
+++ b/examples/gesture_recognizer/android/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
+        android:background="@color/black"
         android:taskAffinity=""
         android:theme="@style/Theme.CastVideosTheme"
         tools:ignore="AllowBackup">
